# Mage3D

./: .editorconfig  .gitattributes  .gitignore  BuildWindows.bat  CMakeLists.txt  Mage3DX.sln  README.md  builder.py  compile.py  display.cpp  display.h  engine.h  export header TODO note.txt  git_commit.bat  git_commit_push.bat  git_pull.bat  git_push.bat  main.cpp  prepare.bat  preprocess.json  settings.ini  timer.h
DirectX/: .clang-format  CMakeLists.txt  README.md
DirectX/assets/shaders/: basicPS.hlsl  basicVS.hlsl  textureVS.hlsl
DirectX/cmake/: buildtype.cmake  coloredmessage.cmake  filter.cmake  find_bmd.cmake  find_fmt.cmake  find_spdlog.cmake  shaders.cmake
DirectX/docs/: CMakeLists.txt  mainpage.md
DirectX/include/: mage_pch.h  pch.h
DirectX/include/mage/: common.h  resource.h  winwrapper.h
DirectX/include/mage/core/: app.h  camera.h  display.h  keyboard.h  math_helper.h  mathhelper.h  mouse.h  util.h
DirectX/include/mage/debug/: callstack.h  debug_info.h  debuginfo.h  debugmessagemap.h  display_exception.h  displayexception.h  graphics_exception.h  graphicsexception.h  info_exception.h  infoexception.h  log.h  mageexception.h  stacktrace_exception.h  stacktraceexception.h  textureexception.h
DirectX/include/mage/entities/: box.h  cone.h  cube.h  indexedtrianglelist.h  melon.h  plane.h  prism.h  pyramid.h  sheet.h  sphere.h
DirectX/include/mage/graphics/: bindable.h  bindables.h  constantbuffer.h  graphics.h  imgui_manager.h  imguimanager.h  indexbuffer.h  inputlayout.h  irenderable.h  pixelshader.h  primitives.h  renderable.h  texture_surface.h  texturesurface.h  topology.h  transformconstantbuffer.h  vertexbuffer.h  vertexshader.h
DirectX/include/mage/graphics/bindables/: constant_buffer.h  constantbuffer.h  index_buffer.h  indexbuffer.h  input_layout.h  inputlayout.h  pixel_shader.h  pixelshader.h  topology.h  transform_constant_buffer.h  transformconstantbuffer.h  vertex_buffer.h  vertex_shader.h  vertexbuffer.h  vertexshader.h
DirectX/libs/bmd/include/bmd/: arrays.h  core.h  files.h  strutil.h  types.h
DirectX/libs/fmt/: CONTROL
DirectX/libs/fmt/debug/lib/: fmtd.lib
DirectX/libs/fmt/debug/lib/pkgconfig/: fmt.pc
DirectX/libs/fmt/include/fmt/: core.h
DirectX/libs/fmt/lib/: fmt.lib
DirectX/libs/fmt/lib/pkgconfig/: fmt.pc
DirectX/libs/fmt/share/fmt/: fmt-config-version.cmake  fmt-targets.cmake  vcpkg_abi_info.txt
DirectX/libs/spdlog/: CONTROL
DirectX/libs/spdlog/debug/lib/pkgconfig/: spdlog.pc
DirectX/libs/spdlog/include/spdlog/fmt/: fmt.h
DirectX/libs/spdlog/lib/pkgconfig/: spdlog.pc
DirectX/libs/spdlog/share/spdlog/: vcpkg_abi_info.txt
DirectX/src/: CMakeLists.txt
DirectX/src/mage/: mage.rc  winmain.cpp
DirectX/src/mage/core/: app.cpp  camera.cpp  display.cpp  keyboard.cpp  math_helper.cpp  mouse.cpp  timer.cpp  util.cpp
DirectX/src/mage/debug/: callstack.cpp  debug_info.cpp  debug_message_map.cpp  debuginfo.cpp  debugmessagemap.cpp  display_exception.cpp  displayexception.cpp  graphics_exception.cpp  graphicsexception.cpp  info_exception.cpp  infoexception.cpp  log.cpp  mage_exception.cpp  mageexception.cpp  texture_exception.cpp  textureexception.cpp
DirectX/src/mage/entities/: box.cpp  melon.cpp  pyramid.cpp  sheet.cpp
DirectX/src/mage/graphics/: bindable.cpp  graphics.cpp  imgui_manager.cpp  indexbuffer.cpp  inputlayout.cpp  irenderable.cpp  pixelshader.cpp  renderable.cpp  sampler.cpp  texture.cpp  texture_surface.cpp  texturesurface.cpp  topology.cpp  transformconstantbuffer.cpp  vertexbuffer.cpp  vertexshader.cpp
DirectX/src/mage/graphics/bindables/: index_buffer.cpp  indexbuffer.cpp  input_layout.cpp  pixel_shader.cpp  pixelshader.cpp  transform_constant_buffer.cpp  vertex_buffer.cpp  vertex_shader.cpp  vertexbuffer.cpp
EngineTools/: EngineTools.cpp  EngineTools.vcxproj  EngineTools.vcxproj.filters
Mage3DX/: App.cpp  App.h  Bindable.cpp  Bindable.h  BindableCodex.h  BindableManger.h  Bindables.h  Blender.cpp  Blender.h  Box.cpp  Box.h  Callstack.cpp  Callstack.h  Camera.cpp  Camera.h  Color.h  Common.h  ConstantBuffer.cpp  ConstantBuffer.h  Cylinder.cpp  Cylinder.h  DebugInfo.cpp  DebugInfo.h  DebugMessageMap.cpp  DebugMessageMap.h  DebugTools.cpp  DebugTools.h  Display.cpp  Display.h  DisplayException.cpp  DisplayException.h  DummyModel.cpp  DummyModel.h  DummyObject.h  DynamicConstantBuffer.cpp  DynamicConstantBuffer.h  Fonts.cpp  Fonts.h  GDIPlusManager.cpp  GDIPlusManager.h  (+168 more)
Mage3DX/libs/: bmd.lib
Mage3DX/scripts/: prepare.bat
TestApp/: TestApp.licenseheader  TestApp.vcxproj  TestApp.vcxproj.filters  winmain.cpp
app/: CMakeLists.txt  main.cpp
assets/: basic.frag  basic.vert  basic_color.vert  materials.json  shaders.json  source_attribution.txt
assets/models/: bricks.mtl  so_i_remember.mtl  untitled.mtl
assets/shaders/: base_post_processing.vert  basic.frag  basic.vert  basic_color.frag  basic_color.vert  basic_lighting.frag  basic_lighting.vert  basic_model.frag  blur.frag  edges.frag  grayscale.frag  greenscale.frag  inversion.frag  inversion.vert  lighting.frag  lighting.glh  lighting.vert  screen.frag  sharpen.frag  skybox.frag  skybox.vert  transparent.frag  transparent.vert  vertex_attribs.glh
cmake/: buildtype.cmake  coloredmessage.cmake  copydlls.cmake  filter.cmake
common/: CMakeLists.txt
common/include/bmd/: common.h  errors.h  files.h  platform.h  strutil.h  types.h
common/src/bmd/: files.cpp  strutil.cpp
docs/: CMakeLists.txt  mainpage.md
include/: display.h  engine.h  logger.h  mage3d_exported.h  mage3d_platform.h
src/: CMakeLists.txt  display.cc  lib.cpp  main.cc
src/mage/: common.cpp
src/mage/core/: assetmanager.cpp  camera.cpp  display.cpp  engine.cpp  file.cpp  game.cpp  gameobject.cpp  input.cpp  log.cpp  scene.cpp  stdcolor.cpp  timer.cpp  transform.cpp  util.cpp
src/mage/errors/: textureexception.cpp
src/mage/events/: eventdispatcher.cpp
src/mage/graphics/: material.cpp  mesh.cpp  model.cpp  modelrenderer.cpp  quadrenderer.cpp  renderengine.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp  vertex.cpp
src/test/: test.cpp
(+89 files in other folders)
